# 391_Project_pi

./: README.md
391_venv/: pyvenv.cfg
391_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
391_ws/log/: latest_build
391_ws/src/cam_sensor/: dual_cam_send.py
391_ws/src/copy/servo_dig_controller/: package.xml  setup.cfg  setup.py
391_ws/src/dril_controller/: setup.cfg  setup.py
391_ws/src/dril_controller/dril_controller/: dril_node.py
391_ws/src/dril_controller/launch/: joy_dril.launch.py
391_ws/src/drive_controller/: setup.cfg  setup.py
391_ws/src/dual_cam_mjpeg_server/: package.xml  setup.cfg  setup.py
391_ws/src/dual_cam_mjpeg_server/dual_cam_mjpeg_server/: node.py
391_ws/src/dual_cam_mjpeg_server/launch/: dual_cam_mjpeg.launch.py
391_ws/src/gripper_controller/: setup.py
391_ws/src/gripper_controller/gripper_controller/: gripper_node.py
391_ws/src/gripper_controller/launch/: joy_gripper.launch.py
391_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
391_ws/src/install/cam_sensor/share/cam_sensor/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
391_ws/src/joystick_controller/: setup.cfg  setup.py
391_ws/src/linear_controller/: package.xml  setup.cfg  setup.py
391_ws/src/log/: latest_build
391_ws/src/robot_bringup/: package.xml  setup.cfg  setup.py
391_ws/src/robot_bringup/config/: cam.yaml  dril.yaml  drive.yaml  gripper.yaml  joystick.yaml  linear.yaml  servo.yaml  servo_switch.yaml
391_ws/src/robot_bringup/launch/: bringup.launch.py  bringup_all.launch.py  bringup_noservo.launch.py
391_ws/src/servo_controller/: package.xml  setup.py
391_ws/src/servo_dril_controller/: setup.cfg  setup.py
391_ws/src/servo_switch180_controller/: setup.cfg  setup.py
391_ws/src/servo_switch180_controller/launch/: joy_servo_switch180.launch.py
391_ws/src/tao_controller/: package.xml  setup.cfg  setup.py
391_ws/web/: index.html
esp32/: platformio.ini
esp32/src/: drive.cpp  moter_dril.cpp  newstep_tao.cpp  servo.cpp  step_ar.cpp  step_tao.cpp
esp32/test/: all_servo.cpp  drive.cpp  drive_encode.cpp  esp1.cpp  esp2.cpp  gripper.cpp  linear.cpp  moter_dril.cpp  newstep_tao.cpp  servo_ad.cpp  servo_dril.cpp  servo_gripper.cpp  servo_switch180.cpp  servo_v1.cpp  step_ar.cpp  step_tao.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/dril_controller/share/dril_controller/: package.ps1  package.sh  package.xml
install/drive_controller/share/drive_controller/: package.dsv  package.sh  package.xml
install/dual_cam_mjpeg_server/share/dual_cam_mjpeg_server/: package.sh  package.zsh
install/gripper_controller/share/gripper_controller/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/joystick_controller/share/joystick_controller/: package.bash  package.sh  package.zsh
install/linear_controller/lib/linear_controller/: linear_node
install/linear_controller/share/linear_controller/: package.dsv  package.sh
install/servo_controller/share/servo_controller/: package.sh
install/servo_dril_controller/lib/servo_dril_controller/: servo_dril_node
install/servo_dril_controller/share/servo_dril_controller/: package.bash  package.sh  package.xml
install/servo_switch180_controller/share/servo_switch180_controller/: package.sh
install/tao_controller/share/tao_controller/: package.ps1  package.sh
log/: latest_build
(+67 files in other folders)
