<?xml version="1.0"?>
<package format="3">
  <name>dual_cam_mjpeg_server</name>
  <version>0.1.0</version>
  <description>Dual USB cameras → MJPEG over HTTP on localhost (no rosbridge needed).</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>