<?xml version="1.0"?>
<package format="3">
<name>robot_bringup</name>
<version>0.0.1</version>
<description>Unified bringup for joystick, drive, linear, servos, drill, gripper, Tao, cam sender, and MJPEG web.</description>
<maintainer email="you@example.com">oat</maintainer>
<license>MIT</license>


<buildtool_depend>ament_python</buildtool_depend>


<exec_depend>rclpy</exec_depend>
<exec_depend>launch</exec_depend>
<exec_depend>launch_ros</exec_depend>
<exec_depend>ament_index_python</exec_depend>


<!-- runtime deps (nodes provided by other pkgs) -->
<exec_depend>joystick_controller</exec_depend>
<exec_depend>drive_controller</exec_depend>
<exec_depend>linear_controller</exec_depend>
<exec_depend>servo_controller</exec_depend>
<exec_depend>servo_switch180_controller</exec_depend>
<exec_depend>gripper_controller</exec_depend>
<exec_depend>dril_controller</exec_depend>
<exec_depend>servo_dril_controller</exec_depend>
<exec_depend>tao_controller</exec_depend>
<exec_depend>cam_sensor</exec_depend>
<exec_depend>dual_cam_mjpeg_server</exec_depend>


<export>
<build_type>ament_python</build_type>
</export>
</package>