<?xml version="1.0"?>
<package format="3">
  <name>gripper_controller</name>
  <version>0.0.1</version>
  <description>ROS 2 package for controlling gripper position via topic /man/cmd_gripper</description>

  <maintainer email="oatdev54@example.com">oat</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Code dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <!-- (ถ้าโค้ดใช้ geometry_msgs จริงค่อยคงไว้) -->
  <!-- <depend>geometry_msgs</depend> -->

  <!-- Launch-time dependencies (ใช้เฉพาะตอนรันจาก .launch.py) -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>joy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
