<?xml version="1.0"?>
<package format="3">
  <name>cam_sensor</name>
  <version>0.1.0</version>
  <description>ROS 2 package for sending multi-USB camera frames over TCP (with resize).</description>

  <maintainer email="your@email.com">your_name</maintainer>
  <license>MIT</license>

  <!-- build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
